# dat-nfl-strength-of-schedule

./: README.md  main.py  nflschedule.csv  pyproject.toml  schedule.py  strengthofschedule.py
templates/: home.html  nfl-sos.html
