[tool.poetry]
name = "dat-nfl-strength-of-schedule"
version = "0.2.0"
description = ""
authors = ["Darnell Thomas <darnell.thomas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
